fixed bug where hamburger menu would not work on mobile

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,3 +1,3 @@
-.nav-link {
+#navbarNavAltMarkup {
    border-radius: 9999px;
 }
